# cryptovkr

Telegram/: CMakeLists.txt
Telegram/SourceFiles/core/: sandbox.cpp
Telegram/SourceFiles/history/: history.cpp  history.h  history_item.cpp  history_item.h  history_widget.cpp  history_widget.h
Telegram/SourceFiles/history/view/media/: history_view_photo.cpp
Telegram/lib_cryptovkr/: CMakeLists.txt  cryptovkr.h  lib_cryptovkr.cpp  pch.h
